# spacy-fastfit

./: .pre-commit-config.yaml  README.md  pyproject.toml  test.py  test2.py
src/spacy_fastfit/: __init__.py  models.py  schemas.py
